Refactor DistinctAggregationStrategyChooser
Make different distinct aggregation strategy choices
exclusive, so that order of optimizer rules does not matter.